--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -12,9 +12,8 @@
     .subtitle {
       a {
         position: relative;
-        top: -2.2em;
-        left: 77.87%;
-        float: left;
+        top: 0;
+        float: right;
         clear: both;
         color: @colorBlack;
       }
@@ -57,10 +56,10 @@
     
     .tagline {
       position: relative;
-      top: -4.65em;
+      top: -5em;
       left: 0.2em;  
       .fontSansSerif4-5;
-      letter-spacing: 0.055em;
+      letter-spacing: -0.02em;
     }
     .menu {
       display: block;
@@ -79,12 +78,11 @@
 @media only screen and (min-width: 1599px) {
   .home-content {
     .title {
-      margin-bottom: 4em;
+      margin-bottom: 10em;
     }
-    .subtitle {
-      a {
-        left: 74.1%;
-      }
+
+    .frame {
+      margin-bottom: 17.5em;
     }
   }  
 }
