--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -5,16 +5,16 @@
     .tagline {
       position: relative;
       top: -1.05em;
+      z-index: -1;
       .fontSansSerif3-0;
-      letter-spacing: 0.0166em;
+      letter-spacing: 0.02em;
     }
 
     .subtitle {
       a {
         position: relative;
         top: -2.2em;
-        left: 77.87%;
-        float: left;
+        float: right;
         clear: both;
         color: @colorBlack;
       }
@@ -83,7 +83,7 @@
     }
     .subtitle {
       a {
-        left: 74.1%;
+        right: 2em;
       }
     }
   }  
