--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -13,8 +13,10 @@
     <div class="row">
       <div class="col-d-4 col-m-12 circle-graph" 
            ng-repeat="chart in page.skills">
-
-         
+        <canvas>
+          
+        </canvas>
+        <h2 class="subtitle">{{chart.title}}</h2>
       </div>
     </div>
   </div>  
