--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -14,7 +14,7 @@
       <div class="col-d-4 col-m-12 circle-graph" 
            ng-repeat="chart in page.skills">
         <canvas>
-          
+          <arc></arc>
         </canvas>
         <h2 class="subtitle">{{chart.title}}</h2>
       </div>
