updates to the code page

--- a/public/stylesheets/includes/_mixins.less
+++ b/public/stylesheets/includes/_mixins.less
@@ -46,7 +46,13 @@
 .fontSerif4-0 {
   font-family: 'BodoniXT';
   font-weight: 300;
-  font-size: 4em; 
+  font-size: 4em;
+}
+
+.fontSerif6-7-5 {
+  font-family: 'BodoniXT';
+  font-weight: 300;
+  font-size: 6.75em; 
 }
 
 .fontSerif8-0 {
