--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -24,16 +24,11 @@ a {
   }
 }
 
-.title, .subtitle {
-  width: 35%;
-  min-width: 550px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .title {
   position: relative;
-  margin-top: 3em;
+  width: 35%;
+  min-width: 550px;
+  margin: 3em auto 0;
   text-align: center;
   a { float: left; }
 
@@ -46,7 +41,8 @@ a {
 }
 
 .subtitle {
-
+  text-align: center;
+  
   h1,h3,h4 {
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
