weird styling bug

--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -24,11 +24,16 @@ a {
   }
 }
 
-.title {
-  position: relative;
+.title, .subtitle {
   width: 35%;
   min-width: 550px;
-  margin: 3em auto 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.title {
+  position: relative;
+  margin-top: 3em;
   text-align: center;
   a { float: left; }
 
@@ -41,8 +46,7 @@ a {
 }
 
 .subtitle {
-  text-align: center;
-  
+
   h1,h3,h4 {
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
