--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -5,6 +5,7 @@
     .tagline {
       position: relative;
       top: -1.05em;
+      float: left;
       z-index: -1;
       .fontSansSerif3-0;
       letter-spacing: 0.02em;
@@ -13,7 +14,7 @@
     .subtitle {
       a {
         position: relative;
-        top: -2.2em;
+        top: -0.5em;
         float: right;
         clear: both;
         color: @colorBlack;
@@ -82,7 +83,7 @@
     }
     .subtitle {
       a {
-        right: 2em;
+        // right: 2em;
       }
     }  
   }
