basic graph drawings

--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -12,9 +12,9 @@
 
     <div class="row">
       <div class="col-d-4 col-m-12 circle-graph" 
-           ng-repeat="chart in page.skills">
+           data-ng-repeat="chart in page.skills" data-ng-class="chart.class">
         
-        <svg class="graph-box" ng-class="chart.title.toLowerCase()"></svg>
+        <svg class="graph-box"></svg>
         <div class="subtitle">
           <h3>{{chart.title}}</h3>
         </div>
