--- a/public/stylesheets/partials/_code.less
+++ b/public/stylesheets/partials/_code.less
@@ -19,8 +19,10 @@
 		h3 { margin: 0; }
 
 		svg.graph-box {
-			width: 95%;
+			display: block;
+			width: 90%;
 			height: 300px;
+			margin: 0 auto;
 		}
 	}
 
