--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -14,7 +14,7 @@
       <div class="col-d-4 col-m-12 circle-graph" 
            data-ng-repeat="chart in page.skills" data-ng-class="chart.class">
         
-        <div data-donut-graph data-index="{{$index}}"></div>
+        <svg class="graph-box" data-donut-graph data-index="{{$index}}"></svg>
         <div class="subtitle">
           <h3>{{chart.title}}</h3>
         </div>
