placeholder, github link

--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -40,7 +40,7 @@ a {
   h1 {
     display: block;
     margin: 0 auto;
-    .fontSerif9-0;
+    .fontSansSerif9-0;
     letter-spacing: -0.08em;
   }
 }
@@ -63,6 +63,14 @@ a {
   h4 { 
     .fontSansSerif2-2-5;
     margin: 0.5em 0 0;
+  }
+
+
+  a {
+    &.icon {
+      padding: 0.7em;
+      font-size: 1.5em;
+    }
   }
 }
 
