--- a/public/views/partials/placeholder.html
+++ b/public/views/partials/placeholder.html
@@ -1,11 +1,13 @@
-<div class="container">
+<div class="container placeholder">
 	<div class="content">
 		<div class="row">
 			<div class="col-d-12">
-				<h2>stay tuned</h2>
-				<h3>for now, check out my 
-					<a href="https://github.com/louisnk">github</a>
-				</h3>
+				<div class="subtitle">
+					<h2>stay tuned</h2>
+					<h3>for now, check out my
+						<a href="https://github.com/louisnk" class="icon icon-github2"></a>
+					</h3>
+				</div>
 			</div>
 		</div>
 	</div>
