--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -2,6 +2,8 @@
   .home-content {
     z-index: 1;
 
+    .title h1 { .fontSerif9-0; }
+
     .tagline {
       position: relative;
       top: -1.05em;
