--- a/public/stylesheets/responsive/core_responsive.less
+++ b/public/stylesheets/responsive/core_responsive.less
@@ -14,9 +14,8 @@
 
   .title, .subtitle {
     width: 100%;
-    text-align: center;
     min-height: 0;
-    margin: 5em auto 0;
+    margin: 5em 7em 0;
   }
   .subtitle h4 {
     .fontSansSerif3-0;
