--- a/public/views/partials/life.html
+++ b/public/views/partials/life.html
@@ -1,8 +1,17 @@
 <div class="container" data-ng-controller="LifeController">
+	<div data-hero-image></div>
 	<div class="content life-content">
 		<div class="title mobile-title">
 			<h1>{{page.title}}</h1>
 			<span class="tagline">{{page.tagline}}</span>
+		</div>
+
+		<div class="profile-image">
+			<img src="{{page.profileImage}}" alt="A picture of Louis">
+		</div>
+
+		<div class="bio">
+			<p ng-repeat="chunk in sections">{{chunk.content}}</p>
 		</div>
 	</div>
 </div>
