helps to target the scope object

--- a/public/views/partials/life.html
+++ b/public/views/partials/life.html
@@ -11,7 +11,7 @@
 		</div>
 
 		<div class="bio">
-			<p ng-repeat="chunk in sections">{{chunk.content}}</p>
+			<p ng-repeat="chunk in page.sections">{{chunk.content}}</p>
 		</div>
 	</div>
 </div>
