--- a/public/views/partials/life.html
+++ b/public/views/partials/life.html
@@ -11,7 +11,7 @@
 		</div>
 
 		<ul class="bio">
-			<li ng-repeat="chunk in page.sections">{{chunk.content}}</li>
+			<li ng-repeat="chunk in page.sections"><p>{{chunk.content}}</p></li>
 		</ul>
 	</div>
 </div>
