--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -14,6 +14,8 @@ body {
   font-smooth: auto;
 }
 
+p { font-size: 1.8em; }
+
 a {
   color: @colorBlack;
   text-decoration: none;
@@ -21,6 +23,16 @@ a {
   &:hover, &:active, &:focus {
     color: @colorBrownDark;
     text-decoration: none;
+  }
+}
+
+ul {
+  padding: 0;
+
+  li {
+    display: block;
+    margin: 0;
+    padding: 0;
   }
 }
 
