--- a/public/stylesheets/includes/_mixins.less
+++ b/public/stylesheets/includes/_mixins.less
@@ -34,121 +34,97 @@
 .fontSerif2-0 {
   font-family: 'BodoniXT';
   font-weight: 300;
-  font-size: 2em; 
+  font-size: 2rem; 
 }
 
 .fontSerif2-5 {
   font-family: 'BodoniXT';
   font-weight: 300;
-  font-size: 2.5em; 
+  font-size: 2.5rem; 
 }
 
 .fontSerif4-0 {
   font-family: 'BodoniXT';
   font-weight: 300;
-  font-size: 4em;
+  font-size: 4rem;
 }
 
-.fontSerif6-7-5 {
+.fontSerif6-0 {
   font-family: 'BodoniXT';
   font-weight: 300;
-  font-size: 6.75em; 
-}
-
-.fontSerif8-0 {
-  font-family: 'BodoniXT';
-  font-weight: 300;
-  font-size: 8em; 
-}
-
-.fontSerif9-0 {
-  font-family: 'BodoniXT';
-  font-weight: 300;
-  font-size: 9em; 
+  font-size: 6rem; 
 }
 
 
 /* Sans-serif (copy) fonts */
 .fontSansSerif1-6 {
   font-family: "FuturaT-Light";
-  font-size: 1.6em;
+  font-size: 1.6rem;
   font-weight: 400;
 }
 
 .fontSansSerif2-0 {
   font-family: "FuturaT-Light";
-  font-size: 2em;
+  font-size: 2rem;
   font-weight: 400;
 }
 
 .fontSansSerif2-2-5 {
   font-family: "FuturaT-Light";
-  font-size: 2.25em;
+  font-size: 2.25rem;
   font-weight: 400;
 }
 
 .fontSansSerif3-0 {
   font-family: "FuturaT-Light";
-  font-size: 3em;
+  font-size: 3rem;
   font-weight: 400;
 }
 .fontSansSerif4-0 {
   font-family: "FuturaT-Light";
-  font-size: 4em;
+  font-size: 4rem;
   font-weight: 400;
 }
 .fontSansSerif4-5 {
   font-family: "FuturaT-Light";
-  font-size: 4.5em;
+  font-size: 4.5rem;
   font-weight: 400;
 }
-.fontSansSerif6-7-5 {
+.fontSansSerif6-0 {
   font-family: "FuturaT-Light";
-  font-size: 6.75em;
+  font-size: 6rem;
   font-weight: 400; 
-}
-
-.fontSansSerif8-0 {
-  font-family: "FuturaT-Light";
-  font-size: 8em;
-  font-weight: 400;
-}
-
-.fontSansSerif9-0 {
-  font-family: "FuturaT-Light";
-  font-size: 9em;
-  font-weight: 400;
 }
 
 
 /* Bold Sans-serifs */
 .fontSansSerifBold1-0 {
   font-family: "Futura-Medium";
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 400;
 }
 
 .fontSansSerifBold2-0 {
   font-family: "Futura-Medium";
-  font-size: 2em;
+  font-size: 2rem;
   font-weight: 400;
 }
 
 .fontSansSerifBold3-0 {
   font-family: "Futura-Medium";
-  font-size: 3em;
+  font-size: 3rem;
   font-weight: 400;
 }
 
 .fontSansSerifBold6-0 {
   font-family: "Futura-Medium";
-  font-size: 6em;
+  font-size: 6rem;
   font-weight: 400;
 }
 
 
 .fontSansSerifBold15-0 {
   font-family: "Futura-Medium";
-  font-size: 15em;
+  font-size: 15rem;
   font-weight: 400;
 }
