--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -14,7 +14,7 @@ body {
   font-smooth: auto;
 }
 
-p { font-size: 1.8em; }
+p { font-size: 1.8rem; }
 
 a {
   color: @colorBlack;
@@ -37,23 +37,23 @@ ul {
 }
 
 .title, .subtitle {
-  width: 35%;
-  min-width: 550px;
+  width: 49%;
+  min-width: 600px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .title {
   position: relative;
-  margin-top: 3em;
+  margin-top: 1.87rem;
   text-align: center;
   a { float: left; }
 
   h1 {
     display: block;
     margin: 0 auto;
-    .fontSansSerif9-0;
-    letter-spacing: -0.08em;
+    .fontSansSerif6-0;
+    letter-spacing: -0.08rem;
   }
 }
 
@@ -69,19 +69,19 @@ ul {
   h1,h3 {
     margin: -5px 0 0 0;
   }
-  h1 { .fontSansSerif9-0; }
-  h2 { .fontSansSerif6-7-5; }
-  h3 { .fontSansSerif4-5; }
+  h1 { .fontSansSerif6-0; }
+  h2 { .fontSansSerif4-5; }
+  h3 { .fontSansSerif3-0; }
   h4 { 
     .fontSansSerif2-2-5;
-    margin: 0.5em 0 0;
+    margin: 0.325rem 0 0;
   }
 
 
   a {
     &.icon {
-      padding: 0.7em;
-      font-size: 1.5em;
+      padding: 0.47rem;
+      font-size: 1rem;
     }
   }
 }
@@ -94,11 +94,11 @@ ul, li {
 h1,h2,h3,h4,h5,h6 {
   font-family: "BodoniXT";
 }
-.hidden-phone {
+.hidden-mobile {
   display: block !important;
   visibility: visible !important;
 }
-.visible-phone {
+.visible-mobile {
   display: none !important;
   visibility: hidden !important;
 }
