--- a/public/stylesheets/partials/_links.less
+++ b/public/stylesheets/partials/_links.less
@@ -3,12 +3,12 @@ a {
     display: block;
     margin: 0 auto;
     padding: 0.95em 0;
-    width: 3.125em;
+    width: 3.125rem;
     border: 0 solid @colorBlack;
     text-align: center;
     text-transform: uppercase;
     background-repeat: no-repeat;
-    .fontSerif8-0;
+    .fontSerif6-0;
 
     &:hover {
       color: @colorBlack;
@@ -44,8 +44,8 @@ a {
   a {
     &.framed {
       padding: 1em 0;
-      width: 4em;
-      border-width: 0.2em;
+      width: 4rem;
+      border-width: 0.2rem;
       .fontSerif4-0;
     }
   }
@@ -55,8 +55,8 @@ a {
   a {
     &.framed {
       padding: 1.5em 0;
-      width: 5em;
-      border-width: 0.25em;
+      width: 5rem;
+      border-width: 0.25rem;
     }
   }
 }
