--- a/public/stylesheets/responsive/core_responsive.less
+++ b/public/stylesheets/responsive/core_responsive.less
@@ -2,11 +2,11 @@
   body {
     overflow: hidden !important;
   } 
-  .hidden-phone {
+  .hidden-mobile {
     display: none !important;
     visibility: hidden !important;
   }
-  .visible-phone {
+  .visible-mobile {
     display: block !important;
     visibility: visible !important;
   }
