--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -2,21 +2,21 @@
   .home-content {
     z-index: 1;
 
-    .title h1 { .fontSerif9-0; }
+    .title h1 { .fontSerif6-0; }
 
     .tagline {
       position: relative;
-      top: -1.05em;
+      top: -1.05rem;
       float: left;
       z-index: -1;
       .fontSansSerif3-0;
-      letter-spacing: 0.02em;
+      letter-spacing: 0.02rem;
     }
 
     .subtitle {
       a {
         position: relative;
-        top: -0.5em;
+        top: -0.5rem;
         float: right;
         clear: both;
         color: @colorBlack;
@@ -34,7 +34,7 @@
     position: fixed;
     top: 70%;
     margin: 0 0;
-    font-size: 0.9em;
+    font-size: 0.9rem;
   }
 }
 
@@ -43,7 +43,7 @@
     position: fixed;
     left: 7.5%;
     top: 74.5%;
-    // min-height: 15em;
+    // min-height: 15rem;
     float: left;
     z-index: 5;
     color: @colorWhite;
@@ -54,25 +54,25 @@
       h1 { 
         .fontSansSerifBold15-0; 
         margin: 0;
-        letter-spacing: -0.08em;
+        letter-spacing: -0.08rem;
       }
     }
     
     .tagline {
       position: relative;
-      top: -1em;
-      left: 0.2em;  
+      top: -1rem;
+      left: 0.2rem;  
       .fontSansSerif4-5;
-      letter-spacing: -0.02em;
+      letter-spacing: -0.02rem;
     }
     .menu {
       display: block;
       position: relative;
-      top: -1.4em;
-      left: 6.09em;
+      top: -1.4rem;
+      left: 6.09rem;
       margin: 0;
-      padding: 1em;
-      .fontSansSerif8-0;
+      padding: 1rem;
+      .fontSansSerif6-0;
       color: @colorWhite;
     }
   }  
@@ -81,12 +81,25 @@
 @media only screen and (min-width: 1599px) {
   .home-content {
     .title {
-      margin-bottom: 10em;
+      margin-bottom: 10rem;
     }
     .subtitle {
       a {
-        // right: 2em;
+        // right: 2rem;
       }
     }  
   }
 }
+
+@media only screen and (min-width: 1599px) {
+  .home-content {
+    .title {
+      margin-bottom: 10rem;
+    }
+
+    .frame {
+      margin-bottom: 17.5rem;
+    }
+  }  
+}
+
