phone to mobile

--- a/public/views/partials/heroes.html
+++ b/public/views/partials/heroes.html
@@ -1,7 +1,7 @@
 <div class="hero-image" 
 		 style="background-image: url('{{page && page.heroImageUrl }}')">
 
-  <span class="triangle-down hidden-phone" 
+  <span class="triangle-down hidden-mobile" 
   			ng-click="broadcast($event, TO_CONTENT)"></span>
 	<h3 ng-if="states.mobile" class="photo-loc">
 		{{page.heroImageLocation}}
