--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -37,7 +37,7 @@ ul {
 }
 
 .title, .subtitle {
-  width: 49%;
+  width: 47%;
   min-width: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -73,7 +73,7 @@ ul {
   h2 { .fontSansSerif4-5; }
   h3 { .fontSansSerif3-0; }
   h4 { 
-    .fontSansSerif2-2-5;
+    .fontSansSerif1-5;
     margin: 0.325rem 0 0;
   }
 
