--- a/public/stylesheets/partials/_heroes.less
+++ b/public/stylesheets/partials/_heroes.less
@@ -56,5 +56,8 @@
 @media only screen and (orientation: landscape) {
   .hero-image {
     background-size: cover;
+    top: 0;
+    left: -74%;
+    width: 175%;
   }
 }
