--- a/public/stylesheets/partials/_home.less
+++ b/public/stylesheets/partials/_home.less
@@ -6,10 +6,10 @@
 
     .tagline {
       position: relative;
-      top: -1.05rem;
+      top: -1.5rem;
       float: left;
       z-index: -1;
-      .fontSansSerif3-0;
+      .fontSansSerif1-5;
       letter-spacing: 0.02rem;
     }
 
@@ -48,7 +48,7 @@
     z-index: 5;
     color: @colorWhite;
     a { color: @colorWhite; }
-
+        
     .mobile-title {
       float: left;
       h1 { 
@@ -60,9 +60,9 @@
     
     .tagline {
       position: relative;
-      top: -1rem;
-      left: 0.2rem;  
-      .fontSansSerif4-5;
+      top: -1.5rem;
+      left: 0.2rem;
+      .fontSansSerif1-5;
       letter-spacing: -0.02rem;
     }
     .menu {
@@ -76,6 +76,12 @@
       color: @colorWhite;
     }
   }  
+}
+
+@media all and (orientation:lansdcape) {
+  .mobile-title {
+    h1 { .fontSansSerifBold6-0; }
+  }
 }
 
 @media only screen and (min-width: 1599px) {
