cleanup, bug fixes

--- a/public/stylesheets/includes/core.less
+++ b/public/stylesheets/includes/core.less
@@ -38,7 +38,7 @@ ul {
 
 .title, .subtitle {
   width: 47%;
-  min-width: 600px;
+  min-width: 42rem;
   margin-left: auto;
   margin-right: auto;
 }
