--- a/public/stylesheets/responsive/core_responsive.less
+++ b/public/stylesheets/responsive/core_responsive.less
@@ -15,7 +15,7 @@
   .title, .subtitle {
     width: 100%;
     min-height: 0;
-    margin: 5em 7em 0;
+    margin: 3.1rem 4.3rem 0;
   }
   .subtitle h4 {
     .fontSansSerif3-0;
