--- a/public/stylesheets/partials/_heroes.less
+++ b/public/stylesheets/partials/_heroes.less
@@ -53,7 +53,7 @@
 }
 
 
-@media only screen and (orientation: landscape, max-width: 992px) {
+@media only screen and (orientation: landscape) and (max-width: 992px) {
   .hero-image {
     background-size: cover;
     top: 0;
